--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,19 @@
 body {
-    color: brown;
+    color: #333333;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+
+}
+.container {
+    width: 70%;
+    padding: 1rem;
+    text-align: left;
+    border: 1px solid #dddddd;
+    margin: 0 auto;
+}
+#container h1 {
+    font-size: 70px;
 }
