--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 body {
+    background: #1e1f24;
     color: #333333;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -20,7 +21,15 @@ body {
     font-weight: normal;
     
 }
-
+#cabecera #logo {
+    width: 150px;
+    vertical-align: middle;
+}
+#cabecera #tagline {
+    padding: 0 0 0 1em;
+    font-weight: bold;
+    font-size: 1em;
+}
 .container {
     width: 70%;
     padding: 1rem;
@@ -29,5 +38,9 @@ body {
     margin: 0 auto;
 }
 #container h1 {
-    font-size: 70px;
+    font-size: 20px;
+}
+#post {
+    background: white;
+    padding: 1em;
 }
