ajuster al header, logo y font-size

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ body {
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: white;
     font-weight: bold;
+    font-size: 25px;
     margin: 0;
     padding: 0.5em;
 }
@@ -22,7 +23,7 @@ body {
 }
 
 #cabecera #logo {
-    width: 150px;
+    width: 200px;
     vertical-align: middle;
 }
 #cabecera #tagline {
