--- a/css/main.css
+++ b/css/main.css
@@ -51,3 +51,16 @@ body {
     text-align: center;
     padding: 0.5em;
 }
+
+.button_green {
+    background-color: black;
+    border: gray;
+    border-radius: 10%;
+    color: white;
+    padding: 15px 32px;
+    margin-bottom: 2px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
