--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ body {
 .button_green {
     background-color: black;
     border: gray;
-    border-radius: 10%;
+    border-radius: 10px;
     color: white;
     padding: 15px 32px;
     margin-bottom: 2px;
@@ -63,4 +63,18 @@ body {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+}
+
+.button_gray {
+    box-shadow:inset 0px 0px 15px 3px gray;
+	background-color:transparent;
+	border-radius:10px;
+	border:1px solid gray;
+	display:inline-block;
+	cursor:pointer;
+	color:black;
+	font-size:16px;
+	padding:15px 32px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #263666;
 }
