--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ body {
 }
 
 .button_green {
-    background-color: black;
+    background-color: green;
     border: gray;
     border-radius: 10px;
     color: white;
